Fix bootstrap overflow in x direction

--- a/templates/community/home.html
+++ b/templates/community/home.html
@@ -2,7 +2,7 @@
 {% load static %}
 
 {% block content %}
-<div class="col-12 row gx-0  d-flex justify-content-center align-items-center pb-3 border-0 rounded m-1">
+<div class="col-12 row gx-0  d-flex justify-content-center align-items-center pb-3 border-0 rounded" >
     <!-- Title and user-specific greeting -->
     <div class="col-8 container mt-4 d-flex d-md-none justify-content-center ">
         <h1 class="h1 text-center"> Welcome to <br> the Community <br> Center</h1>
@@ -29,7 +29,7 @@
     </div>
     {% endif %}
 </div>
-<div class="row d-flex d-md-none  justify-content-center align-items-center ">
+<div class="row d-flex d-md-none  justify-content-center align-items-center overflow-hidden gx-0 " id="overflow-control1">
     <!-- Section displaying event categories and a carousel of event images -->
 
     <div class="col-11  h-75">
@@ -85,9 +85,9 @@
         <p> And more .... </p>
     </div>
 </div>
-<div class="d-none row  pb-4 d-md-flex d-lg-none justify-content-around">
+<div class="d-none row  pb-4 d-md-flex d-lg-none justify-content-around overflow-hidden gx-0" id="overflow-control2">
     <!-- Section displaying event categories and a carousel of event images -->
-    <div class=" col-md-5 col-lg-4  ms-3 ps-2 event-info bg-light border-0 rounded">
+    <div class=" col-md-5 col-lg-4   event-info bg-light border-0 rounded">
         <h3 class="text-center mt-3 ">Types of Events</h3>
         <p class="text-center ">Enhance your skills with expert tutors.
             Stretch and strengthen your body with specialists. Obtain government approved qualifications.
@@ -141,9 +141,9 @@
         </div>
     </div>
 </div>
-<div class="d-none row  pb-4  d-lg-flex justify-content-around">
+<div class="d-none row  pb-4  d-lg-flex justify-content-around overflow-hidden gx-0" id="overflow-control3">
     <!-- Section displaying event categories and a carousel of event images -->
-    <div class=" col-md-5 col-lg-5 col-xl-4  ms-3 ps-2 event-info bg-light border-0 rounded">
+    <div class=" col-md-5 col-lg-5 col-xl-4   event-info bg-light border-0 rounded">
         <h3 class="text-center mt-3 ">Types of Events</h3>
         <p class="text-center">Explore a wide array of events at our Community Center. From yoga sessions led by expert instructors, chess tournaments to test your strategic thinking, to government-led workshops for civic engagement – we offer a diverse range of activities to enrich your lifestyle and community involvement.
             <br> 
