Update image sizes

--- a/templates/community/about.html
+++ b/templates/community/about.html
@@ -41,7 +41,7 @@
                 <div class="carousel-inner pb-3">
                   <div class="carousel-item active">
                     <img
-                      src="https://res.cloudinary.com/dwz6t9jry/image/upload/v1700575274/admin-image-person_qlayeg.jpg"
+                      src="https://res.cloudinary.com/dwz6t9jry/image/upload/v1701945852/img-1_vvno6x.png"
                       class="d-block w-100 carousel-image" alt="Admin">
                     <div class="carousel-caption d-none d-lg-block">
                       <h4>Admin : Sarah Wang </h4>
@@ -49,7 +49,7 @@
                     </div>
                   </div>
                   <div class="carousel-item">
-                    <img src="https://res.cloudinary.com/dwz6t9jry/image/upload/v1700575091/cleaner-image_kmjx4i.jpg"
+                    <img src="https://res.cloudinary.com/dwz6t9jry/image/upload/v1701945853/img-3_nb6fsq.png"
                       class="d-block w-100" alt="Cleaner">
                     <div class="carousel-caption d-none d-lg-block">
                       <h4> Cleaner : Tamie Hamilton </h4>
@@ -58,7 +58,7 @@
                   </div>
                   <div class="carousel-item">
                     <img
-                      src="https://res.cloudinary.com/dwz6t9jry/image/upload/v1700575161/maintenanceguy-image_lm0rsy.jpg"
+                      src="https://res.cloudinary.com/dwz6t9jry/image/upload/v1701945860/img-7_o4qpyn.png"
                       class="d-block w-100 carousel-image " alt="Maintenance">
                     <div class="carousel-caption d-none d-lg-block">
                       <h4>Maintenance : Mark Hamilton </h4>
@@ -89,7 +89,7 @@
             </div>
           </div>
           <div class="card carousel-inner m-4  p-4 border-0 rounded ">
-            <img src="https://res.cloudinary.com/dwz6t9jry/image/upload/v1700575044/community-center_id3gc8.jpg"
+            <img src="https://res.cloudinary.com/dwz6t9jry/image/upload/v1701945854/img-4_uxdll6.png"
               alt="community center image " class=" img-fluid overflow-hidden">
             <h4 class="card-title"> Our New Facility </h4>
           </div>
