--- a/templates/community/home.html
+++ b/templates/community/home.html
@@ -77,7 +77,7 @@
             </div>
         </div>
     </div>
-    <div class=" col-10 bg-light event-info  border-0 rounded mb-2 mt-3 ">
+    <div class=" col-10 bg-light event-info  border-0 rounded mb-2 mt-3 m-1 p-2">
         <h2 class="text-center">Types of Events</h2>
         <p class="text-center ">Maths Tutoring: Enhance your skills with expert tutors.Yoga for Wellness:
             Stretch and strengthen your body.
@@ -85,11 +85,11 @@
         <p> And more .... </p>
     </div>
 </div>
-<div class="d-none row  pb-4 d-md-flex d-lg-none justify-content-around overflow-hidden gx-0" id="overflow-control2">
+<div class="d-none row  pb-4 d-md-flex d-lg-none justify-content-around overflow-hidden m-1 gx-0" id="overflow-control2">
     <!-- Section displaying event categories and a carousel of event images -->
-    <div class=" col-md-5 col-lg-4   event-info bg-light border-0 rounded">
+    <div class=" col-md-5 col-lg-4   event-info bg-light border-0 rounded m-1 p-2">
         <h3 class="text-center mt-3 ">Types of Events</h3>
-        <p class="text-center ">Enhance your skills with expert tutors.
+        <p class="text-center  ">Enhance your skills with expert tutors.
             Stretch and strengthen your body with specialists. Obtain government approved qualifications.
             Chess Championship: Showcase your strategic prowess.
             <br> And more ..... </p>
@@ -143,7 +143,7 @@
 </div>
 <div class="d-none row  pb-4  d-lg-flex justify-content-around overflow-hidden gx-0" id="overflow-control3">
     <!-- Section displaying event categories and a carousel of event images -->
-    <div class=" col-md-5 col-lg-5 col-xl-4   event-info bg-light border-0 rounded">
+    <div class=" col-md-5 col-lg-5 col-xl-4   event-info bg-light border-0 rounded p-2">
         <h3 class="text-center mt-3 ">Types of Events</h3>
         <p class="text-center">Explore a wide array of events at our Community Center. From yoga sessions led by expert instructors, chess tournaments to test your strategic thinking, to government-led workshops for civic engagement – we offer a diverse range of activities to enrich your lifestyle and community involvement.
             <br> 
