--- a/staticfiles/styles/style.css
+++ b/staticfiles/styles/style.css
@@ -16,6 +16,9 @@
   background: linear-gradient(89.2deg, rgb(0, 0, 0) 10.4%, rgb(255, 0, 0) 37.1%, rgb(255, 216, 51) 64.3%, rgb(255, 255, 255) 90.5%);
 }
 
+
+
+
 /* Main Background Animation */
 #main-background {
   background: var(--form-background-gradient);
@@ -163,12 +166,23 @@ img-facility {
 .scrollable-section {
   height: 200px; /* Adjust height as needed */
   overflow-y: scroll;
+  overflow-x:hidden;
 }
-
+#overflow-control1,#overflow-control2,#overflow-control3 {
+  margin-right: 0px ;
+}
 .user-item {
   cursor: pointer;
 }
 /* Main Button Container */
+#shareButtonContainer {
+  position: relative;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  transition: 0.3s;
+}
+
 #shareButtonContainer {
   position: relative;
   display: flex;
@@ -210,16 +224,16 @@ img-facility {
 }
 
 /* Share Buttons Pop-up Animation */
-#shareButtonContainer.active .discord-button { transform: translate(70px, 0px); opacity: 1; visibility: visible; }
-#shareButtonContainer.active .twitter-button { transform: translate(47px, -47px); opacity: 1; visibility: visible; }
-#shareButtonContainer.active .reddit-button { transform: translate(0px, -70px); opacity: 1; visibility: visible; }
-#shareButtonContainer.active .messenger-button { transform: translate(-47px, -47px); opacity: 1; visibility: visible; }
-#shareButtonContainer.active .pinterest-button { transform: translate(-70px, 0px); opacity: 1; visibility: visible; }
-#shareButtonContainer.active .instagram-button { transform: translate(-47px, 47px); opacity: 1; visibility: visible; }
-#shareButtonContainer.active .snapchat-button { transform: translate(0px, 70px); opacity: 1; visibility: visible; }
-#shareButtonContainer.active .whatsapp-button { transform: translate(47px, 47px); opacity: 1; visibility: visible; }
+#shareButtonContainer.active .discord-button { transform: translate(calc(70px - 50px), 0px); opacity: 1; visibility: visible; }
+#shareButtonContainer.active .twitter-button { transform: translate(calc(47px - 50px), -47px); opacity: 1; visibility: visible; }
+#shareButtonContainer.active .reddit-button { transform: translate(calc(0px - 50px), -70px); opacity: 1; visibility: visible; }
+#shareButtonContainer.active .messenger-button { transform: translate(calc(-47px - 50px), -47px); opacity: 1; visibility: visible; }
+#shareButtonContainer.active .pinterest-button { transform: translate(calc(-70px - 50px), 0px); opacity: 1; visibility: visible; }
+#shareButtonContainer.active .instagram-button { transform: translate(calc(-47px - 50px), 47px); opacity: 1; visibility: visible; }
+#shareButtonContainer.active .snapchat-button { transform: translate(calc(0px - 50px), 70px); opacity: 1; visibility: visible; }
+#shareButtonContainer.active .whatsapp-button { transform: translate(calc(47px - 50px), 47px); opacity: 1; visibility: visible; }
 
-/* Button Hover Styles */
+/* Button Hover Background Colors */
 .discord-button:hover { background-color: #5865F2; }
 .twitter-button:hover { background-color: #1CA1F1; }
 .reddit-button:hover { background-color: #FF4500; }
