--- a/static/styles/booking.css
+++ b/static/styles/booking.css
@@ -70,7 +70,11 @@ li {
     margin: 0.5rem 0;
     border-radius: 0.25rem;
   }
-
+  .schedule-card .event-card.highlighted-event {
+    font-weight: bold;
+    background-color: yellow;
+    border: 2px solid orange;
+}
 
 
 
