--- a/staticfiles/styles/booking.css
+++ b/staticfiles/styles/booking.css
@@ -70,7 +70,11 @@ li {
     margin: 0.5rem 0;
     border-radius: 0.25rem;
   }
-
+  #event.highlighted-event {
+    font-weight: bold;
+    background-color: yellow;
+    border: 2px solid orange;
+}
 
 
 
