--- a/staticfiles/styles/style.css
+++ b/staticfiles/styles/style.css
@@ -291,3 +291,30 @@ img-facility {
 .Btninstagram:hover .svgContainer {
   background-color: rgba(156, 156, 156, 0.466);
 }
+
+@keyframes border-wave {
+  0% { border-color: #FFB199; }
+  25% { border-color: #FFD26F; }
+  50% { border-color: #73A1F9; }
+  75% { border-color: #6DC8F3; }
+  100% { border-color: #FFB199; }
+}
+
+/* Base style for all images */
+[id^="event-image-"] {
+  animation: border-wave 8s linear infinite;
+  border: 4px solid #FFB199; 
+  max-height: 400px;
+  width: auto;
+  object-fit: cover;
+}
+
+[id^="event-image-"]:nth-of-type(4n+1) { animation-delay: 0s; }
+[id^="event-image-"]:nth-of-type(4n+2) { animation-delay: 2s; }
+[id^="event-image-"]:nth-of-type(4n+3) { animation-delay: 4s; }
+[id^="event-image-"]:nth-of-type(4n+4) { animation-delay: 6s; }
+
+
+.card:hover {
+  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2); 
+}
