Add hover effects to events

--- a/staticfiles/styles/style.css
+++ b/staticfiles/styles/style.css
@@ -320,5 +320,16 @@ img-facility {
 
 
 .card:hover {
-  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2); 
+  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.4); 
+}
+
+
+
+[id^="event"] {
+  transition: transform 0.3s ease-in-out, box-shadow 0.3s ease-in-out;
+}
+
+[id^="event"]:hover {
+  transform: scale(1.03); 
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2); 
 }
