--- a/templates/community/about.html
+++ b/templates/community/about.html
@@ -43,7 +43,7 @@
                     <img
                       src="https://res.cloudinary.com/dwz6t9jry/image/upload/v1701945852/img-1_vvno6x.png"
                       class="d-block w-100 carousel-image" alt="Admin">
-                    <div class="carousel-caption d-none d-lg-block">
+                    <div class="pt-4 opacity-75 carousel-caption bg-dark border-0 rounded d-none d-lg-block">
                       <h4>Admin : Sarah Wang </h4>
                       <p> I am here for any query or concerns you might have.</p>
                     </div>
@@ -51,7 +51,7 @@
                   <div class="carousel-item">
                     <img src="https://res.cloudinary.com/dwz6t9jry/image/upload/v1701945853/img-3_nb6fsq.png"
                       class="d-block w-100" alt="Cleaner">
-                    <div class="carousel-caption d-none d-lg-block">
+                    <div class="pt-4 opacity-75 carousel-caption bg-dark border-0 rounded d-none d-lg-block">
                       <h4> Cleaner : Tamie Hamilton </h4>
                       <p> I keep our community center spotless and welcoming.</p>
                     </div>
@@ -60,9 +60,9 @@
                     <img
                       src="https://res.cloudinary.com/dwz6t9jry/image/upload/v1701945860/img-7_o4qpyn.png"
                       class="d-block w-100 carousel-image " alt="Maintenance">
-                    <div class="carousel-caption d-none d-lg-block">
+                    <div class="pt-4 opacity-75 carousel-caption bg-dark border-0 rounded d-none d-lg-block">
                       <h4>Maintenance : Mark Hamilton </h4>
-                      <p> They call me bob the builder , no problem I can't fix.</p>
+                      <p > They call me bob the builder , no problem I can't fix.</p>
                     </div>
                   </div>
                 </div>
