Improve header of gallery page

--- a/templates/community/booking.html
+++ b/templates/community/booking.html
@@ -9,7 +9,7 @@
 
 <!-- Container for the booking section -->
 <div class="container mt-4 ">
-    <h1 class="text-center mb-4"> Welcome to the booking section </h1>
+    <h1 class="text-center pt-4 mt-4 mb-4"> Welcome to the booking section </h1>
     <div class="row">
 
         <!-- Loop over each day in the schedule -->
