--- a/staticfiles/styles/style.css
+++ b/staticfiles/styles/style.css
@@ -16,7 +16,7 @@
   background: linear-gradient(89.2deg, rgb(0, 0, 0) 10.4%, rgb(255, 0, 0) 37.1%, rgb(255, 216, 51) 64.3%, rgb(255, 255, 255) 90.5%);
 }
 
-
+h1 {letter-spacing: 5px;}
 
 
 /* Main Background Animation */
