--- a/templates/community/gallery.html
+++ b/templates/community/gallery.html
@@ -3,8 +3,8 @@
 
 
 {% block content %}
-<div class="container mt-4">
-    <h1 class="text-center">Gallery</h1>
+<div class="container mt-4 pt-4 ">
+    <h1 class="text-center pb-4 mb-4 h1">Welcome to the Gallery</h1>
     <div class="row">  
         <!-- Looping through events with images -->
         {% for event in events_with_images %}
