Change font colour on disclaimer

--- a/templates/community/events/create_event.html
+++ b/templates/community/events/create_event.html
@@ -8,7 +8,7 @@
     <div class="col-11 col-md-9 col-lg-7 mt-5 p-1 mb-5 border-0 rounded" id="main-background">
         <div class="bg-light m-1 p-1 border-0 rounded ">
         <h1 class="text-center"> Create Event </h1>
-        <p class="text-warning">
+        <p class="text-dark">
             <strong> Disclaimer: </strong>
             Instructors will be charged a fee of £200 for event creation. For government officials, no fee is charged.
         </p>
